Hair particle editmode: hiding not working #69432

Closed
opened 2019-09-03 01:19:40 +02:00 by CHET · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.63

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 20:47, hash: 928e0258fe
Worked: (optional)

Short description of error
Hair particle don't hide. They not active after function "hide", but visible like others

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.63 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 20:47, hash: `928e0258fe` Worked: (optional) **Short description of error** Hair particle don't hide. They not active after function "hide", but visible like others
Author

Added subscriber: @cheteron

Added subscriber: @cheteron
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

working fine here, do you have an example .blend where this happens?

working fine here, do you have an example .blend where this happens?
Author

{F7715218}particle.blend its global problem

{[F7715218](https://archive.blender.org/developer/F7715218/blender_2019-09-03_16-36-12.jpg)}[particle.blend](https://archive.blender.org/developer/F7715216/particle.blend) its global problem
Philipp Oeser self-assigned this 2019-09-03 15:59:28 +02:00
Member

Ah, get it now, confirmed.
Two problems here that I need to check...

Ah, get it now, confirmed. Two problems here that I need to check...
Philipp Oeser changed title from Hair particle to Hair particle editmode: hiding not working 2019-09-03 15:59:54 +02:00
Member

Marking this as regression from 2.79

Marking this as regression from 2.79

This issue was referenced by b2b52c6c91

This issue was referenced by b2b52c6c91902c75a994c54ff37f767b93c85478
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69432
No description provided.